fixed footer for other pages and initiative content spacing

--- a/c-sharks/style/footer.css
+++ b/c-sharks/style/footer.css
@@ -62,7 +62,7 @@
 .footer-column2 p{
   display: inline-flex;
   text-align: justify;
-  padding-inline: 30px;
+  padding-inline: 20px;
 }
 
 .call-message {
